support vector model predict

--- a/machine_learning/support_vector_machine/svm.ipynb
+++ b/machine_learning/support_vector_machine/svm.ipynb
@@ -1106,11 +1106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "f8784490",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 0, 1, 0, 0, 2, 0, 0, 1, 1, 1, 2, 2, 2, 2, 2, 0, 2, 2,\n",
+       "       1, 1, 0, 1, 0, 1, 0, 1])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(X_test)"
+   ]
   }
  ],
  "metadata": {
