--- a/machine_learning/hyperparameters/gridsearchcv.ipynb
+++ b/machine_learning/hyperparameters/gridsearchcv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "d07fb1f7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "404cbae4",
    "metadata": {},
    "outputs": [
@@ -91,17 +91,22 @@
        "</div>"
       ],
       "text/plain": [
-       "    sepal length (cm)  sepal width (cm)  ...  petal width (cm)      flower\n",
-       "47                4.6               3.2  ...               0.2      setosa\n",
-       "48                5.3               3.7  ...               0.2      setosa\n",
-       "49                5.0               3.3  ...               0.2      setosa\n",
-       "50                7.0               3.2  ...               1.4  versicolor\n",
-       "51                6.4               3.2  ...               1.5  versicolor\n",
+       "    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "47                4.6               3.2                1.4               0.2   \n",
+       "48                5.3               3.7                1.5               0.2   \n",
+       "49                5.0               3.3                1.4               0.2   \n",
+       "50                7.0               3.2                4.7               1.4   \n",
+       "51                6.4               3.2                4.5               1.5   \n",
        "\n",
-       "[5 rows x 5 columns]"
+       "        flower  \n",
+       "47      setosa  \n",
+       "48      setosa  \n",
+       "49      setosa  \n",
+       "50  versicolor  \n",
+       "51  versicolor  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c3ac7f3b",
    "metadata": {},
    "outputs": [],
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "b4149550",
    "metadata": {},
    "outputs": [
@@ -140,7 +145,7 @@
        "0.9333333333333333"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9604b117",
    "metadata": {},
    "outputs": [
@@ -163,7 +168,7 @@
        "array([1.        , 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "ff89f0e9",
    "metadata": {},
    "outputs": [
@@ -187,7 +192,7 @@
        "array([0.96666667, 1.        , 0.96666667, 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "5f376188",
    "metadata": {},
    "outputs": [
@@ -208,7 +213,7 @@
        "array([0.96666667, 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,22 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "f34eeadc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rbf_1': np.float64(0.9800000000000001),\n",
-       " 'rbf_10': np.float64(0.9800000000000001),\n",
-       " 'rbf_20': np.float64(0.9666666666666668),\n",
-       " 'linear_1': np.float64(0.9800000000000001),\n",
-       " 'linear_10': np.float64(0.9733333333333334),\n",
-       " 'linear_20': np.float64(0.9666666666666666)}"
+       "{'rbf_1': 0.9800000000000001,\n",
+       " 'rbf_10': 0.9800000000000001,\n",
+       " 'rbf_20': 0.9666666666666668,\n",
+       " 'linear_1': 0.9800000000000001,\n",
+       " 'linear_10': 0.9733333333333334,\n",
+       " 'linear_20': 0.9666666666666666}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,19 +260,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "63fe4b21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <th>std_fit_time</th>\n",
+       "      <th>mean_score_time</th>\n",
+       "      <th>std_score_time</th>\n",
+       "      <th>param_C</th>\n",
+       "      <th>param_kernel</th>\n",
+       "      <th>params</th>\n",
+       "      <th>split0_test_score</th>\n",
+       "      <th>split1_test_score</th>\n",
+       "      <th>split2_test_score</th>\n",
+       "      <th>split3_test_score</th>\n",
+       "      <th>split4_test_score</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>std_test_score</th>\n",
+       "      <th>rank_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000637</td>\n",
+       "      <td>0.000105</td>\n",
+       "      <td>0.000332</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>0.016330</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000309</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>0.000160</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>{'C': 1, 'kernel': 'linear'}</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>0.016330</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000548</td>\n",
+       "      <td>0.000096</td>\n",
+       "      <td>0.000270</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>10</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>{'C': 10, 'kernel': 'rbf'}</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>0.016330</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000361</td>\n",
+       "      <td>0.000047</td>\n",
+       "      <td>0.000179</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>10</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>{'C': 10, 'kernel': 'linear'}</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.973333</td>\n",
+       "      <td>0.038873</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000420</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>0.000215</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>20</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>{'C': 20, 'kernel': 'rbf'}</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.036515</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.000296</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.000151</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>20</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>{'C': 20, 'kernel': 'linear'}</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.042164</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mean_fit_time  std_fit_time  mean_score_time  std_score_time param_C  \\\n",
+       "0       0.000637      0.000105         0.000332        0.000066       1   \n",
+       "1       0.000309      0.000015         0.000160        0.000004       1   \n",
+       "2       0.000548      0.000096         0.000270        0.000045      10   \n",
+       "3       0.000361      0.000047         0.000179        0.000025      10   \n",
+       "4       0.000420      0.000011         0.000215        0.000008      20   \n",
+       "5       0.000296      0.000012         0.000151        0.000003      20   \n",
+       "\n",
+       "  param_kernel                         params  split0_test_score  \\\n",
+       "0          rbf      {'C': 1, 'kernel': 'rbf'}           0.966667   \n",
+       "1       linear   {'C': 1, 'kernel': 'linear'}           0.966667   \n",
+       "2          rbf     {'C': 10, 'kernel': 'rbf'}           0.966667   \n",
+       "3       linear  {'C': 10, 'kernel': 'linear'}           1.000000   \n",
+       "4          rbf     {'C': 20, 'kernel': 'rbf'}           0.966667   \n",
+       "5       linear  {'C': 20, 'kernel': 'linear'}           1.000000   \n",
+       "\n",
+       "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
+       "0                1.0           0.966667           0.966667                1.0   \n",
+       "1                1.0           0.966667           0.966667                1.0   \n",
+       "2                1.0           0.966667           0.966667                1.0   \n",
+       "3                1.0           0.900000           0.966667                1.0   \n",
+       "4                1.0           0.900000           0.966667                1.0   \n",
+       "5                1.0           0.900000           0.933333                1.0   \n",
+       "\n",
+       "   mean_test_score  std_test_score  rank_test_score  \n",
+       "0         0.980000        0.016330                1  \n",
+       "1         0.980000        0.016330                1  \n",
+       "2         0.980000        0.016330                1  \n",
+       "3         0.973333        0.038873                4  \n",
+       "4         0.966667        0.036515                5  \n",
+       "5         0.966667        0.042164                6  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Approach 3: Use GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "clf = GridSearchCV(svm.SVC(gamma=\"auto\"), {\n",
+    "  'C': [1, 10, 20],\n",
+    "  'kernel': ['rbf', 'linear']\n",
+    "}, cv=5, return_train_score=False)\n",
+    "\n",
+    "clf.fit(iris.data, iris.target)\n",
+    "\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7a8b4cb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>param_C</th>\n",
+       "      <th>param_kernel</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.980000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.980000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.980000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.973333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.966667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>20</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.966667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  param_C param_kernel  mean_test_score\n",
+       "0       1          rbf         0.980000\n",
+       "1       1       linear         0.980000\n",
+       "2      10          rbf         0.980000\n",
+       "3      10       linear         0.973333\n",
+       "4      20          rbf         0.966667\n",
+       "5      20       linear         0.966667"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['param_C', 'param_kernel', 'mean_test_score']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "52eff03d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9800000000000001"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63776b9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Approach 3: Use GridSearchCV\n",
-    "from sklearn.model_selection import GridSearchCV\n"
+    "clf.best_params_"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.11.4)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
