--- a/machine_learning/hyperparameters/gridsearchcv.ipynb
+++ b/machine_learning/hyperparameters/gridsearchcv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d07fb1f7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "404cbae4",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "51  versicolor  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "c3ac7f3b",
    "metadata": {},
    "outputs": [],
@@ -135,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "b4149550",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9333333333333333"
+       "0.9555555555555556"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "9604b117",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "array([1.        , 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "ff89f0e9",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "array([0.96666667, 1.        , 0.96666667, 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "5f376188",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "array([0.96666667, 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "f34eeadc",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        " 'linear_20': 0.9666666666666666}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "63fe4b21",
    "metadata": {},
    "outputs": [
@@ -305,10 +305,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000637</td>\n",
-       "      <td>0.000105</td>\n",
-       "      <td>0.000332</td>\n",
-       "      <td>0.000066</td>\n",
+       "      <td>0.000699</td>\n",
+       "      <td>0.000280</td>\n",
+       "      <td>0.000311</td>\n",
+       "      <td>0.000042</td>\n",
        "      <td>1</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
@@ -323,10 +323,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000309</td>\n",
+       "      <td>0.000323</td>\n",
        "      <td>0.000015</td>\n",
-       "      <td>0.000160</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.000164</td>\n",
+       "      <td>0.000006</td>\n",
        "      <td>1</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 1, 'kernel': 'linear'}</td>\n",
@@ -341,10 +341,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000548</td>\n",
-       "      <td>0.000096</td>\n",
-       "      <td>0.000270</td>\n",
-       "      <td>0.000045</td>\n",
+       "      <td>0.000462</td>\n",
+       "      <td>0.000071</td>\n",
+       "      <td>0.000258</td>\n",
+       "      <td>0.000075</td>\n",
        "      <td>10</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 10, 'kernel': 'rbf'}</td>\n",
@@ -359,10 +359,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.000361</td>\n",
-       "      <td>0.000047</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>0.000025</td>\n",
+       "      <td>0.000300</td>\n",
+       "      <td>0.000023</td>\n",
+       "      <td>0.000149</td>\n",
+       "      <td>0.000002</td>\n",
        "      <td>10</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 10, 'kernel': 'linear'}</td>\n",
@@ -377,10 +377,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000420</td>\n",
-       "      <td>0.000011</td>\n",
-       "      <td>0.000215</td>\n",
-       "      <td>0.000008</td>\n",
+       "      <td>0.000468</td>\n",
+       "      <td>0.000118</td>\n",
+       "      <td>0.000227</td>\n",
+       "      <td>0.000038</td>\n",
        "      <td>20</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 20, 'kernel': 'rbf'}</td>\n",
@@ -395,10 +395,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.000296</td>\n",
-       "      <td>0.000012</td>\n",
-       "      <td>0.000151</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>0.000337</td>\n",
+       "      <td>0.000047</td>\n",
+       "      <td>0.000160</td>\n",
+       "      <td>0.000006</td>\n",
        "      <td>20</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 20, 'kernel': 'linear'}</td>\n",
@@ -417,12 +417,12 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time param_C  \\\n",
-       "0       0.000637      0.000105         0.000332        0.000066       1   \n",
-       "1       0.000309      0.000015         0.000160        0.000004       1   \n",
-       "2       0.000548      0.000096         0.000270        0.000045      10   \n",
-       "3       0.000361      0.000047         0.000179        0.000025      10   \n",
-       "4       0.000420      0.000011         0.000215        0.000008      20   \n",
-       "5       0.000296      0.000012         0.000151        0.000003      20   \n",
+       "0       0.000699      0.000280         0.000311        0.000042       1   \n",
+       "1       0.000323      0.000015         0.000164        0.000006       1   \n",
+       "2       0.000462      0.000071         0.000258        0.000075      10   \n",
+       "3       0.000300      0.000023         0.000149        0.000002      10   \n",
+       "4       0.000468      0.000118         0.000227        0.000038      20   \n",
+       "5       0.000337      0.000047         0.000160        0.000006      20   \n",
        "\n",
        "  param_kernel                         params  split0_test_score  \\\n",
        "0          rbf      {'C': 1, 'kernel': 'rbf'}           0.966667   \n",
@@ -449,7 +449,7 @@
        "5         0.966667        0.042164                6  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "7a8b4cb0",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "5      20       linear         0.966667"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "52eff03d",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "0.9800000000000001"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,10 +584,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "63776b9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1, 'kernel': 'rbf'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf.best_params_"
    ]
