Finished remove outliers

--- a/machine_learning/regression_data_science/bangalorehomeprices.ipynb
+++ b/machine_learning/regression_data_science/bangalorehomeprices.ipynb
@@ -400,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_45696/3999863029.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_54010/3999863029.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1651,24 +1651,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "id": "f008bf44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_scatter_chart(df, location):\n",
+    "def plot_scatter_chart(df,location):\n",
     "    bhk2 = df[(df.location==location) & (df.bhk==2)]\n",
     "    bhk3 = df[(df.location==location) & (df.bhk==3)]\n",
-    "    matplotlib.rcParams['figure.figsize'] = (15, 10)\n",
-    "    plt.scatter(bhk2.total_sqft, bhk2.price_per_sqft, color='blue', label='2 BHK', s=50)\n",
-    "    plt.scatter(bhk3.total_sqft, bhk3.price_per_sqft, marker='+', color='green', label='3 BHK', s=50)\n",
+    "    matplotlib.rcParams['figure.figsize'] = (15,10)\n",
+    "    plt.scatter(bhk2.total_sqft,bhk2.price,color='blue',label='2 BHK', s=50)\n",
+    "    plt.scatter(bhk3.total_sqft,bhk3.price,marker='+', color='green',label='3 BHK', s=50)\n",
     "    plt.xlabel(\"Total Square Feet Area\")\n",
-    "    plt.ylabel(\"Price Per Square Feet (Lakh Indian Rupees)\")\n",
+    "    plt.ylabel(\"Price (Lakh Indian Rupees)\")\n",
     "    plt.title(location)\n",
     "    plt.legend()\n",
-    "    plt.show()\n",
-    "\n",
-    "plot_scatter_chart(df7, \"Rajaji Nagar\")"
+    "    \n",
+    "plot_scatter_chart(df7,\"Rajaji Nagar\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3832fb2",
+   "metadata": {},
+   "source": [
+    "We should also remove properties where for same location, the price of (for example) 3 bedroom apartment is less than 2 bedroom apartment (with same square ft area). What we will do is for a given location, we will build a dictionary of stats per bhk, i.e.\n",
+    "```\n",
+    "{\n",
+    "    '1' : {\n",
+    "        'mean': 4000,\n",
+    "        'std: 2000,\n",
+    "        'count': 34\n",
+    "    },\n",
+    "    '2' : {\n",
+    "        'mean': 4300,\n",
+    "        'std: 2300,\n",
+    "        'count': 22\n",
+    "    },    \n",
+    "}\n",
+    "```\n",
+    "Now we can remove those 2 BHK apartments whose price_per_sqft is less than mean price_per_sqft of 1 BHK apartment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "6d3f22fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7329, 7)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def remove_bhk_outliers(df):\n",
+    "    exclude_indices = np.array([])\n",
+    "    for location, location_df in df.groupby('location'):\n",
+    "        bhk_stats = {}\n",
+    "        for bhk, bhk_df in location_df.groupby('bhk'):\n",
+    "            bhk_stats[bhk] = {\n",
+    "                'mean': np.mean(bhk_df.price_per_sqft),\n",
+    "                'std': np.std(bhk_df.price_per_sqft),\n",
+    "                'count': bhk_df.shape[0]\n",
+    "            }\n",
+    "        for bhk, bhk_df in location_df.groupby('bhk'):\n",
+    "            stats = bhk_stats.get(bhk-1)\n",
+    "            if stats and stats['count']>5:\n",
+    "                exclude_indices = np.append(exclude_indices, bhk_df[bhk_df.price_per_sqft<(stats['mean'])].index.values)\n",
+    "    return df.drop(exclude_indices,axis='index')\n",
+    "df8 = remove_bhk_outliers(df7)\n",
+    "# df8 = df7.copy()\n",
+    "df8.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d20a2627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_scatter_chart(df8,\"Rajaji Nagar\")"
    ]
   }
  ],
