predict price function

--- a/machine_learning/regression_data_science/model/bangalorehomeprices.ipynb
+++ b/machine_learning/regression_data_science/model/bangalorehomeprices.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: <object object at 0x7f8cf85ab3d0>\n"
+      "Using matplotlib backend: <object object at 0x7fbc69b2a3d0>\n"
      ]
     }
    ],
@@ -400,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_5947/3999863029.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_25744/3999863029.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3057,13 +3057,13 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>lasso</td>\n",
-       "      <td>0.687433</td>\n",
+       "      <td>0.687467</td>\n",
        "      <td>{'alpha': 1, 'selection': 'random'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>decision_tree</td>\n",
-       "      <td>0.725913</td>\n",
+       "      <td>0.715982</td>\n",
        "      <td>{'criterion': 'mse', 'splitter': 'best'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3073,8 +3073,8 @@
       "text/plain": [
        "               model  best_score                               best_params\n",
        "0  linear_regression    0.818354                      {'normalize': False}\n",
-       "1              lasso    0.687433       {'alpha': 1, 'selection': 'random'}\n",
-       "2      decision_tree    0.725913  {'criterion': 'mse', 'splitter': 'best'}"
+       "1              lasso    0.687467       {'alpha': 1, 'selection': 'random'}\n",
+       "2      decision_tree    0.715982  {'criterion': 'mse', 'splitter': 'best'}"
       ]
      },
      "execution_count": 52,
